- fixed line which was too much of the vertical scroller bar - added tooltip for horizontal and vertical scroller

--- a/src/css/jheatmap.css
+++ b/src/css/jheatmap.css
@@ -199,3 +199,15 @@ table.heatmap td.borderT, table.heatmap th.borderT {
 table.heatmap td.ra {
     border-left: 1px dashed #333;
 }
+
+
+#tooltip {
+    position: absolute;
+    z-index: 3000;
+    border: 1px solid #111;
+    background-color: #eee;
+    padding: 5px;
+    opacity: 0.85;
+    font-size: 11px;
+}
+#tooltip h3, #tooltip div { margin: 0; }
